--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,10 +2,12 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url 'https://maven.fabric.io/public' }
     }
 
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.2'
+        classpath 'io.fabric.tools:gradle:1.+'
     }
 }
 
