--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,18 +1,22 @@
 buildscript {
     repositories {
+        maven {
+            url "https://maven.google.com"
+        }
         google()
         jcenter()
-        maven { url 'https://maven.fabric.io/public' }
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.2'
-        classpath 'io.fabric.tools:gradle:1.+'
+        classpath 'com.android.tools.build:gradle:3.3.1'
     }
 }
 
 allprojects {
     repositories {
+        maven {
+            url "https://maven.google.com"
+        }
         google()
         jcenter()
     }
