--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   shared_preferences: ^0.4.3
   image_picker: ^0.6.1+4
   http: ^0.12.0+2
-  crashlytics: ^0.0.2
+  flutter_crashlytics: ^1.0.0
 
 dev_dependencies:
   flutter_test:
