--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,20 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>Fabric</key>
-    <dict>
-      <key>APIKey</key>
-      <string>6a7ce1f6b703cc7a825c703c0b7bffbdaad45672</string>
-      <key>Kits</key>
-      <array>
-        <dict>
-          <key>KitInfo</key>
-          <dict/>
-          <key>KitName</key>
-          <string>Crashlytics</string>
-        </dict>
-      </array>
-    </dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
@@ -36,14 +22,38 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<key>Fabric</key>
+	<dict>
+		<key>APIKey</key>
+		<string>6a7ce1f6b703cc7a825c703c0b7bffbdaad45672</string>
+		<key>Kits</key>
+		<array>
+			<dict>
+				<key>KitInfo</key>
+				<dict/>
+				<key>KitName</key>
+				<string>Crashlytics</string>
+			</dict>
+		</array>
+	</dict>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>NSCameraUsageDescription</key>
 	<string>For capture photo of your article  identification</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>For record audio to save in notes in the article</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>For capture picture of your company or article</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
